--- a/Form1.resx
+++ b/Form1.resx
@@ -118,6 +118,186 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="verticalPlatform.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox6.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="horizontalPlatform.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="enemyOne.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAS0AAAF9CAIAAADeD6lOAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
