Changed movement keys. Changed behavior on reaching end. Started new level. Other minor adjustments.

--- a/Form1.resx
+++ b/Form1.resx
@@ -1087,4 +1087,97 @@
   <metadata name="gameTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="pictureBox31.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox32.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox35.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
+        jKTf4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh/xsjmlLP4IJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekz
+        Ku4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJ
+        dekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4baYEJdekzKu4b
+        aYEJdekzKu4baYEJdekzkn6Lc9RDnKMe4hz1EOeohzhHPcQ56iHOUQ9xjnqIc9RDnKMe4hz1EOeoh3zP
+        MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>40</value>
+  </metadata>
 </root>
