Creating new form for new level

--- a/Form1.resx
+++ b/Form1.resx
@@ -1147,7 +1147,7 @@
         MSc94fP1H+XJgc7b9faPAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox35.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="verticalPlatform2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAANoAAACqCAIAAABEXcZNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAABZlJREFUeF7t0rFtHVAQA8HfhNpyXW7LnZnKDhsQVKQXLDCXEAQu4effH+kJfz9f
